# spaced

./: LICENSE  README.md  __init__.py  algorithm.py  app.py  auth.py  globals.py  main.py  page.html  pyproject.toml  seed.sql  user.py
templates/: base.html  index.html  logout.html  page.html  profile.html  signin.html  signup.html
