[tool.poetry]
name = "spaced"
version = "0.1.0"
description = ""
authors = ["Evan Griffiths <griffithse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"
Flask-Login = "^0.6.1"

[tool.poetry.dev-dependencies]
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
